--- a/GardenWeb/Views/GardenSpace/Index.cshtml
+++ b/GardenWeb/Views/GardenSpace/Index.cshtml
@@ -7,7 +7,7 @@
     }
 </style>
 <div class="container">
-    <div class="row mb-3">
+    <div class="row mb-3 mt-3">
         <div class="col-6 p-2">
             <div class="card shadow h-100 py-2">
                 <div class="card-body">
@@ -19,7 +19,7 @@
                             <div class="h5 mb-0 font-weight-bold text-gray-800">137</div>
                         </div>
                         <div class="col-auto">
-                            <i class="bi-people-fill fs-2 text-gray-300"></i>
+                            <i class="bi-people-fill fs-2" style="color:#198754"></i>
                         </div>
                     </div>
                 </div>
@@ -37,7 +37,7 @@
                             <div class="h5 mb-0 font-weight-bold text-gray-800">13</div>
                         </div>
                         <div class="col-auto">
-                            <i class="bi-person-plus-fill fs-2 text-gray-300"></i>
+                            <i class="bi-person-plus-fill fs-2" style="color:#198754"></i>
                         </div>
                     </div>
                 </div>
@@ -46,11 +46,6 @@
     </div>
 
     <div class="row mb-3">
-        <div class="col-auto">
-            <button class="btn btn-link btn-md p-0" type="button">
-                <i class="bi-nut-fill text-success"></i>
-            </button>
-        </div>
         <div class="col-auto">
             <button class="btn btn-link btn-md p-0" onclick="RenderCreateModal()" data-bs-toggle="modal" data-bs-target="#createGardenSpaceModal" type="button">
                 <i class="bi-plus-circle-fill text-primary"></i>
