--- a/GardenWeb/Views/GardenUser/Index.cshtml
+++ b/GardenWeb/Views/GardenUser/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿
 
 <div class="container" style="height:100%;">
-    <div class="row mb-3">
+    <div class="row mb-3 mt-3">
         <div class="col-6 ">
             <div class="card shadow h-100 py-2">
                 <div class="card-body">
