--- a/GardenWeb/Views/Shared/_Layout.cshtml
+++ b/GardenWeb/Views/Shared/_Layout.cshtml
@@ -46,7 +46,7 @@
         <div id="content-wrapper" class="d-flex flex-column">
 
             <!-- Main Content -->
-            <div id="content">
+            <div id="content" style="min-height:100vh; background-color:#C0E8D4">
 
                 <!-- Topbar -->
                 @await Html.PartialAsync("_Topbar")
