--- a/GardenWeb/Views/Shared/_Topbar.cshtml
+++ b/GardenWeb/Views/Shared/_Topbar.cshtml
@@ -1,5 +1,5 @@
 ﻿
-<nav class="navbar navbar-expand navbar-light topbar mb-4 static-top shadow" style="background-color: #198754">
+<nav class="navbar navbar-expand navbar-light topbar static-top shadow" style="background-color: #198754">
     <div class="container">
         <label class="text-white fs-3 fw-bold">Garden</label>
 
