--- a/GardenWeb/Views/BaseRootType/Index.cshtml
+++ b/GardenWeb/Views/BaseRootType/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿
 <div class="container" style="height:100%;">
-    <div class="row mb-3">
+    <div class="row mt-3 mb-3">
         <div class="col-12">
             <div class="row">
                 <div class="col-8">
