--- a/GardenWeb/Views/GardenSpace/_GardenBaseTypeModal.cshtml
+++ b/GardenWeb/Views/GardenSpace/_GardenBaseTypeModal.cshtml
@@ -1,12 +1,14 @@
 ﻿<!-- Modal -->
 <div class="modal fade" id="gardenSpaceModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-lg">
+  <div class="modal-dialog">
     <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="garden_space_modal_title">
+   
+        <div class="modal-header">
+        <h5 class="modal-title" id="garden_basetype_title">
 
         </h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+
       </div>
       <div class="modal-body" id="modal_body">
 
