--- a/GardenWeb/Views/Login/Index.cshtml
+++ b/GardenWeb/Views/Login/Index.cshtml
@@ -4,6 +4,7 @@
 }
 <link href="~/vendor/fontawesome-free/css/all.css" rel="stylesheet" />
 <link href="~/css/sb-admin-2.css" rel="stylesheet" />
+<link href="~/js/sweetalert2/sweetalert2.bundle.css" rel="stylesheet" />
 <style>
     body {
         font-family: "IBMPlexSansKR-Regular"
@@ -83,6 +84,7 @@
 </div>
 <script src="~/vendor/jquery/jquery.js"></script>
 <script src="~/vendor/bootstrap/js/bootstrap.js"></script>
+<script src="~/js/sweetalert2/sweetalert2.bundle.js"></script>
 <script src="~/vendor/jquery-easing/jquery.easing.js"></script>
 <script src="~/js/sb-admin-2.js"></script>
 <script src="~/defaultSetting.js"></script>
