--- a/GardenWeb/Views/GardenSpace/IndexForGardenBaseType.cshtml
+++ b/GardenWeb/Views/GardenSpace/IndexForGardenBaseType.cshtml
@@ -7,7 +7,89 @@
     }
 </style>
 <div class="container">
-   GardenBaseType임 ^^
+    <input type="hidden" value="@ViewBag.id" id="space_id" />
+        <div class="row mt-3 mb-3">
+        <div class="col-12">
+            <div class="row">
+                <div class="col-8">
+                    <h3 class="fw-bold mb-3 float-left">
+                        <i class="bi bi-nut-fill me-2" style="color:#198754"></i>
+                        타입 설정
+                    </h3>
+                </div>                
+            </div>
+             
+            <div class="row">
+                <div class="col-sm-12 col-xl-6 p-2">
+                    <div class="card">
+                        <div class="card-header fw-bold">
+                            <div class="row">
+                                <div class="col-md-10">
+                                    <i class="bi bi-box"></i>
+                                    RootType
+                                </div>
+                                <div class="col-md-2">
+                                    <button class="btn btn-link p-0 float-end" onclick="RenderCreateModal()" type="button" data-bs-toggle="modal" data-bs-target="#gardenSpaceModal">
+                                        <i class="bi bi-plus-circle-fill"></i>
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card-body">
+                            <table class="table table-hover" id="baseType_tb">
+                                <thead>
+                                    <tr>
+                                        <th>이름</th>
+                                        <th>설명</th>
+                                        <th>색상</th>
+                                        <th></th>
+                                    </tr>
+                                </thead>
+                                <tbody id="baseRootType_tbody">                                
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-sm-12 col-xl-6 p-2">
+                    <div class="card">
+                        <div class="card-header fw-bold">
+                            <div class="row">
+                                     <input type="hidden" id="relate_baseRootType_id"/>
+                                 <div class="col-md-10" id="baseBranchType_title">
+                                    <span class="text-secondary">RootType 테이블의 [이름] 을 선택하세요.</span>
+                                </div>
+                                <div class="col-md-2" id="create_base_branch_type_dv">
+                                    
+                                </div>       
+                            </div>            
+                        </div>
+                        <div class="card-body">
+                            <table class="table table-hover">
+                                <thead>
+                                    <tr>
+                                        <th>이름</th>
+                                        <th>설명</th>
+                                        <th>색상</th>
+                                        <th></th>
+                                    </tr>
+                                </thead>
+                                <tbody id="baseBranchType_tbody">
+                                 
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
-<partial name="_Modal.cshtml" />
-<script src="~/js/gardenSpace.js"></script>
+<partial name="_GardenBaseTypeModal.cshtml" />
+<script src="~/js/gardenBaseType.js"></script>
+<script type="text/javascript">
+    document.addEventListener("DOMContentLoaded", function(){
+        LoadBaseTypes();
+    });
+</script>
